# rust-bind-prefix-updater

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: bind.rs  ip_checker.rs  main.rs  web_ip_checker.rs
