[package]
name = "rust-bind-prefix-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
ipnet = "2.8.0"
regex = "1.9.1"

[target.'cfg(unix)'.dependencies]#
openssl = { version = "0.10.41", features = ["vendored"], resolver = "1" }