[package]
name = "rust-bind-prefix-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.8.0"
regex = "1.9.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"