[package]
name = "rust-bind-prefix-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.5", features = ["cargo"] }
ipnet = "2.9.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = {version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.41", features = ["vendored"], resolver = "1" }
